@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -354,7 +354,7 @@ public final class SSLLogger {
                 Object[] messageFields = {
                     logger.loggerName,
                     level.getName(),
-                    Utilities.toHexString(Thread.currentThread().getId()),
+                    Utilities.toHexString(Thread.currentThread().threadId()),
                     Thread.currentThread().getName(),
                     dateTimeFormat.format(Instant.now()),
                     formatCaller(),
@@ -371,7 +371,7 @@ public final class SSLLogger {
             Object[] messageFields = {
                     logger.loggerName,
                     level.getName(),
-                    Utilities.toHexString(Thread.currentThread().getId()),
+                    Utilities.toHexString(Thread.currentThread().threadId()),
                     Thread.currentThread().getName(),
                     dateTimeFormat.format(Instant.now()),
                     formatCaller(),
